# expenditure-management-api

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: config.py  containers.py  database.py  exceptions.py  log.py  main.py  middlewares.py  models.py  pyproject.toml  routes.py  schemas.py
app/api/: __init__.py
app/api/admin/users/: schemas.py  use_case.py  views.py
app/api/auth/: schemas.py  use_case.py  views.py
app/api/users/: schemas.py  views.py
app/api/wallets/: schemas.py  use_cases.py  views.py
app/api/wallets/histories/: schemas.py  use_cases.py  (+1 more)
app/db/: abstract_database.py  database.py  database2.py
app/dependencies/: database.py  datetime.py  repository.py  session.py  usecase.py
app/models/: base.py  history.py  user.py  wallet.py
app/models/alchemy/: base.py  history.py  user.py  wallet.py
app/models/pydantic/: base.py  history.py  user.py  wallet.py
app/repositories/: __init__.py  abstract_wallet_repository.py  test_wallet_repository.py  wallet.py  wallet_repository.py  wallet_repository2.py
app/repositories/user/: abstract_user_repository.py  test_user_repository.py  user_repository.py
app/repositories/wallet/: test_wallet_repository.py  wallet_repository.py
app/session/: abstract_session.py  alchemy_session.py
app/tests/: conftest.py
app/tests/repositories/: wallet_repository.py
app/usecases/auth/: abstract_auth_usecase.py  auth_usecase.py  test_auth_usecase.py
app/usecases/wallet/: abstract_wallet_usecase.py  test_wallet_usecase.py  wallet_usecase.py
app/utils/: datetime.py
(+24 files in other folders)
