[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.22.0"
fastapi = "0.100.0"
httpx = "0.24.1"
pytest = "7.4.0"
sqlalchemy = "2.0.18"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
